# GoIT_Web_HomeWork_7

./: config.ini  my_select.py  pyproject.toml  seeds.py
conf/: db.py  models.py
migrations/versions/: 1db22a5714d0_init.py
